# Mox-Token

./: .gitignore  README.md  justfile  pyproject.toml
script/: deploy.py
src/: mox_token.vy
tests/: conftest.py  test_token.py
tests/fuzz/: fuzz_token.py  test_fuzz_token.py
tests/uint/: test_token.py
