[project]
name = "moccasin_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mamushi>=0.0.6",
    "moccasin>=0.4.2",
    "ruff>=0.12.8",
    "vheader>=0.1.1",
]

[tool.moccasin.project]
src = "src"
dependencies = ["snekmate"]
